--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 pandas
 streamlit
-langchain
-langchain-core
-langchain-community
-langchain-google-genai
-google-api-core # Google API bağımlılıkları için
-pydantic # LangChain ve Pydantic modelleri için
-chromadb
+langchain==0.2.11
+langchain-core==0.2.22
+langchain-community==0.2.9
+langchain-google-genai==1.1.2
+google-cloud-aiplatform
+chromadb==0.5.4
