--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 pandas
 streamlit
-langchain==0.2.11
-langchain-core==0.2.22
-langchain-community==0.2.9
-langchain-google-genai==1.1.2
-google-cloud-aiplatform
-chromadb==0.5.4
+pysqlite3-binary
+langchain
+langchain-core
+langchain-community
+langchain-google-genai
 google-generativeai
-pydantic
+chromadb==0.5.0
 tiktoken
