--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
 pandas
 streamlit
-
-# SQLite support for ChromaDB
 pysqlite3-binary
 
-# LangChain - Uyumlu versiyonlar
+# LangChain - 0.2.x ailesi (uyumlu)
 langchain==0.2.16
 langchain-core==0.2.38
 langchain-community==0.2.16
 
-# Google AI - Güncel versiyon
-langchain-google-genai==2.0.0
-google-generativeai==0.8.3
+# Google AI - 1.x sürümü (langchain 0.2 ile uyumlu)
+langchain-google-genai==1.0.10
+google-generativeai==0.7.2
 
 # ChromaDB
 chromadb==0.5.0
 
-# Pydantic - Açıkça belirt
+# Pydantic
 pydantic>=2.7.4,<3.0.0
 
-# Diğer gereksinimler
+# Diğer
 tiktoken
