--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit
+streamlit==1.40.0
 pandas
-langchain
-langchain-google-genai
-langchain-community
-chromadb
-python-dotenv
-google-generativeai
+langchain==0.3.11
+langchain-core==0.3.11
+langchain-google-genai==2.0.10
+langchain-community==0.3.11
+langchain-chroma==0.2.2
+chromadb==0.4.24
+google-generativeai==0.8.3
+python-dotenv==1.0.1
+pysqlite3-binary
