--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit==1.40.0
+streamlit
 pandas
 langchain==0.3.11
 langchain-core==0.3.11
 langchain-google-genai==2.0.10
 langchain-community==0.3.11
-langchain-chroma==0.2.2
-chromadb==0.4.24
+chromadb==0.4.22
 google-generativeai==0.8.3
-python-dotenv==1.0.1
+python-dotenv
 pysqlite3-binary
