--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 pandas
 langchain==0.3.11
-langchain-core==0.3.11
+langchain-core>=0.3.24,<0.4.0
 langchain-google-genai==2.0.10
 langchain-community==0.3.11
 chromadb==0.4.22
