--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ langchain==0.3.11
 langchain-core>=0.3.24,<0.4.0
 langchain-google-genai==2.0.10
 langchain-community==0.3.11
-chromadb==0.4.22
+langchain-chroma==0.2.2
+chromadb==0.4.18
 google-generativeai==0.8.3
 python-dotenv
 pysqlite3-binary
