--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit
 pandas
-langchain
-langchain-google-genai
-langchain-community
-chromadb
+numpy<2.0
+langchain==0.3.11
+langchain-core>=0.3.24,<0.4.0
+langchain-google-genai==2.0.10
+langchain-community==0.3.11
+chromadb==0.4.18
+google-generativeai==0.8.3
 python-dotenv
-google-generativeai
+pysqlite3-binary
